syntax = "proto3";


option java_multiple_files = true;
option java_package = "proto.example.Schema";
option java_outer_classname = "SchemaProtos";

//---------------------------------------------------------

message IdTracker{
  string name=1;
  int32 lastId=2;
}

message IdTrackers{
  repeated IdTracker idTrackers=1;
}

//--------------------------------------------------------

message Customer {

  string email=1;
  string password=2;
  string name=3;
  int64 mobileNumber=4;
  int32 isInitialCouponGenerated=5;

}

message Customers {
  repeated Customer customers = 1;
}

//---------------------------------------------------------

message Product{
  int32 id=1;
  string brand=2;
  string category=3;
  string model=4;
  double price=5;
  int32 stock=6;
}

message Products{
  repeated Product products=1;
}

//---------------------------------------------------------

message CartItem {
  string email=1;
  int32 productId=2;
  double price=3;
  string Time=4;
  string Date=5;
}

message Cart{
  repeated CartItem cartItems = 1;
}

//---------------------------------------------------------

message Order{
  int32 id=1;
  string email=2;
  int32 discount=3;
  double totalAmount=4;
  string Time=5;
  string Date=6;
}

message Orders{
  repeated Order orders=1;
}

//---------------------------------------------------------

message OrderProduct{
  int32 orderId=1;
  int32 productId=2;
  double price=3;
}

message OrderProducts{
  repeated OrderProduct orderProducts=1;
}

//---------------------------------------------------------

message Coupon{
  int32 id=1;
  string email=2;
  int32 getOnOrderId=3;
  int64 couponCode=4;
  string Time=5;
  string Date=6;
}

message Coupons{
  repeated Coupon coupons=1;
}

//---------------------------------------------------------
